[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Button.png" type="Texture" id=2]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -110, -90 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 0.125
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ControlsButton"]
margin_left = 23.3636
margin_top = 9.57956
margin_right = 83.3636
margin_bottom = 49.5796
mouse_filter = 1
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 100.0
margin_bottom = 68.0
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/GraphicsButton"]
margin_left = 23.3636
margin_top = 9.57956
margin_right = 83.3636
margin_bottom = 49.5796
mouse_filter = 1
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ExitButton"]
margin_left = 38.0812
margin_top = 10.0
margin_right = 98.0812
margin_bottom = 50.0
mouse_filter = 1
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 40.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GraphicsButton" to="." method="_on_GraphicsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
